# ros2_computer_vision

./: .gitignore  README.md  commands  config_cv.rviz  ros2_computer_vision.repos  setup.sh  thirdparty.repos
computer_vision/: CMakeLists.txt
computer_vision/src/: cv_node.cpp  pcl_node.cpp
src/aws_scenarios/models/aws_robomaker_racetrack_Billboard_01/: model.sdf
src/aws_scenarios/models/aws_robomaker_racetrack_FenceMesh_01/: model.sdf
src/aws_scenarios/models/aws_robomaker_racetrack_Fence_01/: model.sdf
src/aws_scenarios/models/aws_robomaker_racetrack_Fence_02/: model.sdf
src/aws_scenarios/models/aws_robomaker_racetrack_Track_01/: model.sdf
src/aws_scenarios/models/aws_robomaker_racetrack_Track_02/: model.sdf
src/aws_scenarios/models/aws_robomaker_racetrack_TrafficCone_01/: model.sdf
src/aws_scenarios/models/aws_robomaker_retail_RetailShopFloor_01/: model.sdf
src/aws_scenarios/worlds/: aws_hospital.world  aws_small_warehouse_no_roof.world
src/aws_worlds/models/AdjTable/: model.sdf
src/aws_worlds/models/aws_robomaker_racetrack_Archway_01/: model.sdf
src/aws_worlds/models/aws_robomaker_racetrack_Column_01/: model.sdf
src/aws_worlds/models/aws_robomaker_racetrack_CrashworthBucket_01/: model.sdf
src/aws_worlds/models/aws_robomaker_racetrack_Light_01/: model.sdf
src/aws_worlds/models/aws_robomaker_racetrack_StonePier_01/: model.sdf
src/aws_worlds/models/aws_robomaker_racetrack_StopSign_01/: model.sdf
src/aws_worlds/models/aws_robomaker_racetrack_Track_03/: model.sdf
src/aws_worlds/models/aws_robomaker_racetrack_Track_04/: model.sdf
src/aws_worlds/models/aws_robomaker_racetrack_Track_05/: model.sdf
src/aws_worlds/models/aws_robomaker_racetrack_Wall_01/: model.sdf
src/aws_worlds/worlds/: aws_hospital.world  aws_house.world  aws_racetrack_day.world  aws_racetrack_day_empty.world  aws_racetrack_night.world
src/computer_vision/: CMakeLists.txt  package.xml
src/computer_vision/config/: params.yaml
src/computer_vision/files/: CMakeLists.txt  tiago_spawn.launch.py
src/computer_vision/launch/: keepzone.launch.py  navigation_launch.py  navigation_launch_real.py  sim.launch.py  sim.launch_test.py  simulation.launch.py  tiago_cv.launch.py  tiago_navigation.launch.py  tiago_navigation_real.launch.py  tiago_spawn.launch.py
src/computer_vision/maps/: aws_bookstore.pgm  aws_bookstore.yaml  aws_hospital.pgm  aws_hospital.yaml  aws_house.pgm  aws_house.yaml  aws_house_keep.pgm  aws_house_keep.yaml  aws_warehouse.pgm  aws_warehouse.yaml
src/computer_vision/params/: nav2_params.yaml  tiago_nav_params.yaml  tiago_nav_params_real.yaml
src/computer_vision/src/: cv_node.cpp  cv_pcl_node.cpp  pcl_node.cpp
